--- a/package.json
+++ b/package.json
@@ -13,8 +13,6 @@
     "@hookform/resolvers": "^3.4.2",
     "@mantine/core": "^7.10.1",
     "@mantine/hooks": "^7.10.1",
-    "postcss-custom-media-generator": "^1.1.0",
-    "postcss-preset-env": "^9.5.14",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.51.5",
@@ -23,6 +21,7 @@
     "zod": "^3.23.8"
   },
   "devDependencies": {
+    "@csstools/postcss-global-data": "^2.1.1",
     "@types/react": "^18.2.66",
     "@types/react-dom": "^18.2.22",
     "@typescript-eslint/eslint-plugin": "^7.2.0",
@@ -33,6 +32,8 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.6",
     "postcss": "^8.4.38",
+    "postcss-custom-media": "^10.0.6",
+    "postcss-preset-env": "^9.5.14",
     "postcss-preset-mantine": "^1.15.0",
     "postcss-simple-vars": "^7.0.1",
     "prettier": "^3.3.2",
