--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "@hookform/resolvers": "^3.4.2",
     "@mantine/core": "^7.10.1",
     "@mantine/hooks": "^7.10.1",
+    "chart.js": "^4.4.3",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.51.5",
     "react-icons": "^5.2.1",
