--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
     "@hookform/resolvers": "^3.4.2",
     "@mantine/core": "^7.10.1",
     "@mantine/hooks": "^7.10.1",
+    "@tanstack/react-query": "^5.45.1",
+    "@tanstack/react-query-devtools": "^5.48.0",
+    "axios": "^1.7.2",
     "chart.js": "^4.4.3",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
@@ -33,6 +36,7 @@
     "eslint": "^8.57.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.6",
+    "msw": "^2.3.1",
     "postcss": "^8.4.38",
     "postcss-custom-media": "^10.0.6",
     "postcss-preset-env": "^9.5.14",
@@ -42,5 +46,10 @@
     "typescript": "^5.2.2",
     "vite": "^5.2.0",
     "vite-tsconfig-paths": "^4.3.2"
+  },
+  "msw": {
+    "workerDirectory": [
+      "public"
+    ]
   }
 }
