--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@tanstack/react-query-devtools": "^5.48.0",
     "axios": "^1.7.2",
     "chart.js": "^4.4.3",
+    "jotai": "^2.8.4",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
